@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-07 DP  1.8.1  Fix the debugger's connection class to ensure database
+                      names requiring quotes will work and that is can be used
+                      with SSL and Kerberos connections.
 2007-12-07 DP  1.8.1  Allow the length of array-typed columns to be changed
                       (eg. 'character varying[](100)'), per report from Ferenc
                       Lutischan
